Archive2/e6/fd9e3b05120130/output
+ g++-4.8 -std=c++11 -Wall -W -pedantic main.cpp
main.cpp: In function ‘refp::shared_ptr<T> refp::make_shared(Args&& ...)’:
main.cpp:76:34: error: ‘forward’ is not a member of ‘std’
     return shared_ptr<T> (new T (std::forward<Args> (args) ... ));
                                  ^
main.cpp:76:26: error: expected primary-expression before ‘(’ token
     return shared_ptr<T> (new T (std::forward<Args> (args) ... ));
                          ^
main.cpp:76:34: error: ‘forward’ is not a member of ‘std’
     return shared_ptr<T> (new T (std::forward<Args> (args) ... ));
                                  ^
main.cpp:76:51: error: expected primary-expression before ‘>’ token
     return shared_ptr<T> (new T (std::forward<Args> (args) ... ));
                                                   ^
